--- a/WellDoneIt/WellDoneIt.UWP/project.json
+++ b/WellDoneIt/WellDoneIt.UWP/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Xamarin.Forms": "2.1.0.6524"
+    "MvvmLight": "5.2.0",
+    "MvvmLightLibs": "5.2.0",
+    "Xamarin.Forms": "2.1.0.6526"
   },
   "frameworks": {
     "uap10.0": {}
