--- a/WellDoneIt/WellDoneIt.UWP/WellDoneIt.UWP.csproj
+++ b/WellDoneIt/WellDoneIt.UWP/WellDoneIt.UWP.csproj
@@ -108,6 +108,8 @@
     <None Include="Windows_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="inbox.png" />
+    <Content Include="inbox64.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
