Add Azure Mobile Service

--- a/WellDoneIt/WellDoneIt.UWP/WellDoneIt.UWP.csproj
+++ b/WellDoneIt/WellDoneIt.UWP/WellDoneIt.UWP.csproj
@@ -108,6 +108,9 @@
     <None Include="Windows_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="add64.png" />
+    <Content Include="add64g.png" />
+    <Content Include="check.png" />
     <Content Include="inbox.png" />
     <Content Include="inbox64.png" />
     <Content Include="Properties\Default.rd.xml" />
@@ -133,6 +136,11 @@
     <ProjectReference Include="..\WellDoneIt\WellDoneIt.csproj">
       <Name>WellDoneIt</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <SDKReference Include="SQLite.UWP.2015, Version=3.11.1">
+      <Name>SQLite for Universal Windows Platform</Name>
+    </SDKReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
